[package]
name = "clickhouse-utils"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/GreeFine/clickhouse-utils"
license = "MIT"
authors = ["GreeFine <grefinee@gmail.com>"]
description = "Utilities for working with Clickhouse"
keywords = ["clickhouse", "utils", "migration", "serde"]

[features]
default = []
fastnum = ["fastnum/serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clickhouse = { version = "0.13.3", features = ["rustls-tls", "uuid"] }
md5 = "0.8.0"
tracing = { version = "0.1", features = ["log"] }

# Optional dependencies
fastnum = { version = "0.7", features = ["serde"], optional = true }

[dev-dependencies]
# We need tokio for the examples
tokio = { version = "1.39.0", features = ["rt-multi-thread"] }
